--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
+dist
 node_modules
-bower_components
-coverage
-npm-debug.log
-yarn.lock
-Gemfile.lock
-yarn-error.log
-package-lock.json
-.DS_Store
-.idea
-.vscode
