--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fetch",
+  "name": "fetch-packages",
   "private": true,
   "workspaces": {
     "packages": [
@@ -15,11 +15,12 @@
     "lerna:list": "lerna list",
     "lerna:bootstrap": "lerna bootstrap",
     "build": "lerna run build --since master --no-private",
+    "build:all": "lerna run build",
     "publish": "npm run build && lerna publish --no-private"
   },
   "homepage": "https://js.work",
   "repository": {
     "type": "git",
-    "url": "https://github.com/afeiship/fetch.git"
+    "url": "https://github.com/afeiship/fetch-packages.git"
   }
 }
