--- a/packages/http-schema/tsconfig.json
+++ b/packages/http-schema/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "module": "commonjs",
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
