--- a/packages/http-schema/package.json
+++ b/packages/http-schema/package.json
@@ -3,6 +3,8 @@
   "version": "2.0.0",
   "description": "Http schema based on next-fetch.",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "build": "gulp",
     "test": "jest",
@@ -10,25 +12,25 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@jswork/gulp-pkg-header": "^1.0.1",
-    "del": "^5.1.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@jswork/gulp-pkg-header": "^1.0.8",
+    "@jswork/gulp-registry": "^1.0.18",
+    "@jswork/next": "^1.1.5",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.5",
+    "babel-jest": "^29.5.0",
+    "del": "^6.0.0",
+    "esbuild": "^0.17.12",
+    "esbuild-node-externals": "^1.6.0",
+    "esbuild-plugin-clean": "^1.0.1",
+    "esbuild-plugin-replace": "^1.3.0",
     "gulp": "^4.0.2",
-    "gulp-header": "^2.0.9",
-    "gulp-ignore": "^3.0.0",
-    "gulp-load-plugins": "^2.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-size": "^3.0.0",
-    "gulp-tsc": "^1.3.2",
+    "gulp-esbuild": "^0.11.1",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-uglify": "^3.0.2",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "release-it": "^14.2.1",
-    "typescript": "^4.1.3"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "jest": "^29.5.0",
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "@jswork/http-data-parser": "^1.0.4",
@@ -36,5 +38,24 @@
     "@jswork/next-apply-fetch-middleware": "^1.0.0",
     "@jswork/next-data-transform": "^1.0.5",
     "axios": "^1.3.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "boilerplate": "generator-typescript",
+  "homepage": "https://js.work",
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-typescript"
+    ]
   }
 }
