fix: nir rm task

--- a/packages/http-schema/package.json
+++ b/packages/http-schema/package.json
@@ -57,5 +57,17 @@
       ],
       "@babel/preset-typescript"
     ]
-  }
+  },
+  "keywords": [
+    "cache",
+    "cross",
+    "fetch",
+    "timeout",
+    "compose",
+    "next",
+    "nx",
+    "plugin",
+    "http",
+    "schema"
+  ]
 }
