--- a/packages/http-schema/package.json
+++ b/packages/http-schema/package.json
@@ -34,9 +34,8 @@
   },
   "dependencies": {
     "@jswork/http-data-parser": "^1.0.4",
-    "@jswork/http-rest-config": "^1.0.10",
-    "@jswork/next-apply-fetch-middleware": "^1.0.0",
     "@jswork/next-data-transform": "^1.0.5",
+    "@jswork/next-tmpl": "^1.0.4",
     "axios": "^1.3.2"
   },
   "publishConfig": {
