chore: add hs opst build

--- a/packages/http-schema/package.json
+++ b/packages/http-schema/package.json
@@ -7,6 +7,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "gulp",
+    "postbuild": "npm pkg get name | cnpm sync",
     "test": "jest",
     "release": "release-it"
   },
