--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "lerna:bootstrap": "lerna bootstrap",
     "build": "lerna run build --since master --no-private",
     "build:all": "lerna run build",
-    "publish": "npm run build && lerna publish --no-private"
+    "publish": "npm run build && lerna publish --no-private",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "changeset publish"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.26.1"
   },
   "homepage": "https://js.work",
   "repository": {
