--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "lerna:bootstrap": "lerna bootstrap",
     "build": "lerna run build --since master --no-private",
     "build:all": "lerna run build",
-    "publish": "npm run build && lerna publish --no-private",
-    "changeset": "changeset",
-    "version": "changeset version",
-    "release": "changeset publish"
+    "publish": "npm run build && lerna publish --no-private"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1"
