feat: refactor content-type + http-rest-config

--- a/packages/http-rest-config/.gitignore
+++ b/packages/http-rest-config/.gitignore
@@ -3,10 +3,12 @@ bower_components
 coverage
 npm-debug.log
 yarn.lock
-Gemfile.lock
-yarn-error.log
 package-lock.json
+pnpm-lock.yaml
 .DS_Store
 .idea
 .vscode
 dist
+
+.tmp
+docs
