--- a/packages/http-rest-config/.npmignore
+++ b/packages/http-rest-config/.npmignore
@@ -1,19 +1,20 @@
-build
-src
-config
-static
-.babelrc
-.gitignore
-yarn.lock
+.idea
+.DS_Store
+**/npm-debug.log
+**/node_modules
 test
-
-
 __tests__
-docs
+src
+build
+gulpfile.js
+
 .editorconfig
 .prettierrc
-Gemfile
-LICENSE.txt
-Rakefile
+.prettierignore
 .release-it.json
-gulpfile.js
+typedoc.js
+tsconfig.json
+jest.config.js
+babel.config.js
+yarn-error.log
+yarn.lock
