--- a/packages/http-rest-config/package.json
+++ b/packages/http-rest-config/package.json
@@ -1,53 +1,57 @@
 {
   "name": "@jswork/http-rest-config",
-  "version": "1.0.10",
+  "version": "2.0.0",
   "description": "A simple rest config for react project.",
-  "keywords": [
-    "http",
-    "config",
-    "curd",
-    "rest",
-    "schema"
-  ],
-  "repository": "git@github.com:afeiship/http-rest-config.git",
-  "license": "MIT",
-  "author": "feizheng <1290657123@qq.com>",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "build": "gulp",
     "test": "jest",
     "release": "release-it"
   },
+  "license": "MIT",
   "dependencies": {
-    "@jswork/http-data-parser": "^1.0.4",
-    "@jswork/next": "^1.0.2",
-    "@jswork/next-content-type": "^1.0.0",
-    "@jswork/next-data-transform": "^1.0.4",
-    "@jswork/next-deep-assign": "^1.0.2",
-    "@jswork/next-tmpl": "^1.0.0"
+    "@jswork/next-content-type": "^1.0.2"
   },
   "devDependencies": {
-    "@jswork/gulp-pkg-header": "^1.0.3",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@jswork/gulp-pkg-header": "^1.0.8",
+    "@jswork/gulp-registry": "^1.0.18",
+    "@jswork/next": "^1.1.5",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.5",
+    "babel-jest": "^29.5.0",
     "del": "^6.0.0",
-    "express": "^4.17.1",
+    "esbuild": "^0.17.12",
+    "esbuild-node-externals": "^1.6.0",
+    "esbuild-plugin-clean": "^1.0.1",
+    "esbuild-plugin-replace": "^1.3.0",
     "gulp": "^4.0.2",
-    "gulp-debug": "^4.0.0",
-    "gulp-header": "^2.0.9",
-    "gulp-ignore": "^3.0.0",
-    "gulp-load-plugins": "^2.0.5",
-    "gulp-rename": "^2.0.0",
-    "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.0",
-    "release-it": "^14.2.1",
-    "uglify-js": "3.12.0",
-    "uglify-save-license": "^0.4.1",
-    "yargs": "^16.1.1"
+    "gulp-esbuild": "^0.11.1",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "jest": "^29.5.0",
+    "typescript": "^4.9.5"
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org"
+  },
+  "boilerplate": "generator-typescript",
+  "homepage": "https://js.work",
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-typescript"
+    ]
   }
 }
