--- a/packages/next-apply-fetch-middleware/package.json
+++ b/packages/next-apply-fetch-middleware/package.json
@@ -39,6 +39,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "@jswork/next-compose": "^1.0.0"
   },
   "keywords": [
