--- a/packages/next-data-transform/package.json
+++ b/packages/next-data-transform/package.json
@@ -36,6 +36,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "@jswork/next-param": "^1.0.0"
   },
   "keywords": [
