--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@jswork/http-schema",
-  "version": "2.0.19",
-  "description": "Http schema based on next-fetch.",
+  "name": "@jswork/fetch",
+  "version": "1.0.0",
+  "description": "Get standard fetch from any environment.",
   "main": "dist/index.js",
-  "module": "dist/esm/index.js",
+  "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "gulp",
@@ -32,13 +32,6 @@
     "jest": "^29.5.0",
     "typescript": "^4.9.5"
   },
-  "dependencies": {
-    "@jswork/fetch": "^1.0.0",
-    "@jswork/http-data-parser": "^1.0.4",
-    "@jswork/next-data-transform": "^1.0.5",
-    "@jswork/next-tmpl": "^1.0.6",
-    "axios": "^1.3.2"
-  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
@@ -57,17 +50,5 @@
       ],
       "@babel/preset-typescript"
     ]
-  },
-  "keywords": [
-    "cache",
-    "cross",
-    "fetch",
-    "timeout",
-    "compose",
-    "next",
-    "nx",
-    "plugin",
-    "http",
-    "schema"
-  ]
+  }
 }
