--- a/packages/next-cookie-fetch/package.json
+++ b/packages/next-cookie-fetch/package.json
@@ -38,6 +38,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "fetch-cookie": "^0.11.0",
     "node-fetch": "^2.6.1",
     "tough-cookie": "^4.0.0"
