--- a/packages/next-fetch-with-delay/package.json
+++ b/packages/next-fetch-with-delay/package.json
@@ -38,6 +38,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "@jswork/next-delay": "^1.0.0"
   },
   "keywords": [
