--- a/packages/next-fetch-with-request-id/package.json
+++ b/packages/next-fetch-with-request-id/package.json
@@ -38,6 +38,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "@jswork/next-deep-assign": "^1.0.0",
     "@jswork/next-guid": "^1.0.0"
   },
