--- a/packages/next-fetch-with-response-type/package.json
+++ b/packages/next-fetch-with-response-type/package.json
@@ -43,6 +43,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "@jswork/next-to-action": "^1.0.0"
   },
   "keywords": [
