--- a/packages/next-fetch-with-retry/package.json
+++ b/packages/next-fetch-with-retry/package.json
@@ -43,6 +43,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "fetch-retry": "^4.1.1"
   },
   "keywords": [
