--- a/packages/next-fetch/package.json
+++ b/packages/next-fetch/package.json
@@ -41,6 +41,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "@jswork/next-abstract-request": "^1.0.12",
     "@jswork/next-content-type": "^1.0.2",
     "@jswork/next-data-transform": "^1.0.5",
