--- a/packages/next-spider-fetch/package.json
+++ b/packages/next-spider-fetch/package.json
@@ -38,6 +38,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/fetch": "^1.0.0",
     "@jswork/next-apply-fetch-middleware": "^1.0.0",
     "@jswork/next-fetch-with-debug": "^1.0.0",
     "@jswork/next-fetch-with-delay": "^1.0.0",
