--- a/packages/websites/package.json
+++ b/packages/websites/package.json
@@ -9,5 +9,8 @@
   },
   "keywords": [],
   "author": "afeiship",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@jswork/fetch": "^1.0.0"
+  }
 }
