--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -16,7 +16,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
     "@jswork/gulp-pkg-header": "^1.0.8",
-    "@jswork/gulp-registry": "^1.0.18",
+    "@jswork/gulp-registry": "^1.0.21",
     "@jswork/next": "^1.1.5",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.5",
@@ -28,8 +28,10 @@
     "esbuild-plugin-replace": "^1.3.0",
     "gulp": "^4.0.2",
     "gulp-esbuild": "^0.11.1",
+    "gulp-rename": "^2.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^29.5.0",
+    "node-fetch": "^3.3.1",
     "typescript": "^4.9.5"
   },
   "publishConfig": {
