--- a/packages/enhanced-fetch/package.json
+++ b/packages/enhanced-fetch/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "dependencies": {
-    "@jswork/fetch": "^1.0.0"
+    "@jswork/fetch": "^1.0.0",
+    "@jswork/next-apply-fetch-middleware": "^1.0.2"
   }
 }
