--- a/packages/enhanced-fetch/package.json
+++ b/packages/enhanced-fetch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/enhanced-fetch",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Enhanced-fetch is a utility library that enriches the built-in fetch API with features such as support for response types, timeouts, and destroyable requests.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -56,5 +56,17 @@
   "dependencies": {
     "@jswork/fetch": "^1.0.0",
     "@jswork/next-apply-fetch-middleware": "^1.0.2"
-  }
+  },
+  "keywords": [
+    "cache",
+    "cross",
+    "fetch",
+    "timeout",
+    "compose",
+    "next",
+    "nx",
+    "plugin",
+    "http",
+    "schema"
+  ]
 }
