--- a/packages/node-http-schema/package.json
+++ b/packages/node-http-schema/package.json
@@ -41,5 +41,6 @@
     "@jswork/next-fetch-with-random-ua": "^1.0.2",
     "@jswork/next-fetch-with-timeout": "^1.0.6",
     "node-fetch": "^2.6.1"
-  }
+  },
+  "gitHead": "d669b2f198b5ac8016ad48dd5d24d8367797b237"
 }
