feat: rm fetch from other pkgs

--- a/packages/websites/package.json
+++ b/packages/websites/package.json
@@ -9,8 +9,5 @@
   },
   "keywords": [],
   "author": "afeiship",
-  "license": "MIT",
-  "dependencies": {
-    "@jswork/fetch": "^1.0.0"
-  }
+  "license": "MIT"
 }
