--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -31,7 +31,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^29.5.0",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "2.6.7",
     "typescript": "^4.9.5"
   },
   "publishConfig": {
