--- a/packages/next-cookie-fetch/package.json
+++ b/packages/next-cookie-fetch/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "fetch-cookie": "^0.11.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "2.6.7",
     "tough-cookie": "^4.0.0"
   },
   "keywords": [
