--- a/packages/next-fetch-with-content-type/package.json
+++ b/packages/next-fetch-with-content-type/package.json
@@ -32,7 +32,7 @@
     "gulp-uglify": "^3.0.2",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "2.6.7",
     "prettier": "^2.2.1",
     "release-it": "^14.2.2",
     "uglify-js": "3.12.4",
