--- a/packages/next-fetch/package.json
+++ b/packages/next-fetch/package.json
@@ -31,7 +31,7 @@
     "gulp-size": "^4.0.0",
     "gulp-uglify": "^3.0.2",
     "jest": "^26.6.3",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "2.6.7",
     "release-it": "^14.6.2",
     "uglify-js": "3.13.7",
     "uglify-save-license": "^0.4.1"
