--- a/packages/next-spider-fetch/package.json
+++ b/packages/next-spider-fetch/package.json
@@ -45,7 +45,7 @@
     "@jswork/next-fetch-with-proxy": "^1.0.5",
     "@jswork/next-fetch-with-random-ua": "^1.0.5",
     "@jswork/next-fetch-with-retry": "^1.0.6",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "2.6.7"
   },
   "keywords": [
     "next",
