--- a/packages/web-http-schema/package.json
+++ b/packages/web-http-schema/package.json
@@ -22,7 +22,7 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "jest": "^26.6.3",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "2.6.7",
     "prettier": "^2.2.1",
     "release-it": "^14.2.1",
     "typescript": "^4.1.3"
