--- a/packages/next-data-transform/package.json
+++ b/packages/next-data-transform/package.json
@@ -46,5 +46,6 @@
   },
   "dependencies": {
     "@jswork/next-param": "^1.0.6"
-  }
+  },
+  "gitHead": "f1b57a6b15528643c12457e2bfce2e754f10e887"
 }
