refactor: upt impl method

--- a/packages/http-rest-config/package.json
+++ b/packages/http-rest-config/package.json
@@ -12,8 +12,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@jswork/next-content-type": "^1.0.7",
-    "@jswork/next-difference": "^1.0.1"
+    "@jswork/http-data-parser": "^1.0.8",
+    "@jswork/next-difference": "^1.0.1",
+    "@jswork/next-tmpl": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
