--- a/packages/next-fetch/package.json
+++ b/packages/next-fetch/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jswork/next-fetch",
-  "version": "1.1.25",
-  "description": "Abstract for browser or node.",
-  "homepage": "https://github.com/afeiship/next-fetch",
+  "version": "1.2.0",
+  "description": "Fetch for browser or node.",
+  "homepage": "https://js.work",
   "author": {
     "name": "afei",
     "email": "1290657123@qq.com"
@@ -10,54 +10,38 @@
   "scripts": {
     "build": "gulp",
     "test": "jest",
+    "start": "node ./express.js",
     "release": "release-it"
   },
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@jswork/gulp-pkg-header": "^1.0.3",
-    "@jswork/next": "^1.0.5",
-    "@jswork/next-delete": "^1.0.2",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@jswork/gulp-pkg-header": "^1.0.8",
+    "@jswork/gulp-registry": "^1.0.20",
+    "@jswork/next": "^1.1.5",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-debug": "^4.0.0",
-    "gulp-ignore": "^3.0.0",
-    "gulp-load-plugins": "^2.0.6",
+    "gulp-prettier": "^4.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-size": "^4.0.0",
+    "gulp-replace": "^1.1.4",
     "gulp-uglify": "^3.0.2",
-    "jest": "^26.6.3",
-    "node-fetch": "2.6.7",
-    "release-it": "^14.6.2",
-    "uglify-js": "3.13.7",
+    "jest": "^29.5.0",
+    "jest-location-mock": "^1.0.9",
     "uglify-save-license": "^0.4.1"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env"
+      ]
+    ]
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  },
-  "dependencies": {
-    "@jswork/next-abstract-request": "^1.0.18",
-    "@jswork/next-content-type": "^1.0.7",
-    "@jswork/next-data-transform": "^1.0.12",
-    "@jswork/next-deep-assign": "^1.0.2",
-    "@jswork/next-param": "^1.0.2",
-    "@jswork/next-to-action": "^1.0.0"
-  },
-  "keywords": [
-    "next",
-    "fetch",
-    "cancelable",
-    "interceptor",
-    "timeout",
-    "transform",
-    "response",
-    "request",
-    "filter"
-  ],
-  "gitHead": "f1b57a6b15528643c12457e2bfce2e754f10e887"
+  }
 }
