--- a/packages/node-http-schema/.npmignore
+++ b/packages/node-http-schema/.npmignore
@@ -10,6 +10,11 @@ gulpfile.js
 
 .editorconfig
 .prettierrc
+.prettierignore
 .release-it.json
+typedoc.js
 tsconfig.json
 jest.config.js
+babel.config.js
+yarn-error.log
+yarn.lock
