--- a/packages/node-http-schema/package.json
+++ b/packages/node-http-schema/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@jswork/node-http-schema",
-  "version": "1.0.27",
+  "version": "1.1.0",
   "description": "Http schema for nodejs.",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "build": "gulp",
     "test": "jest",
@@ -10,36 +12,44 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@jswork/gulp-pkg-header": "^1.0.1",
-    "del": "^5.1.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@jswork/gulp-pkg-header": "^1.0.8",
+    "@jswork/gulp-registry": "^1.0.21",
+    "@jswork/next": "^1.1.7",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.5",
+    "babel-jest": "^29.5.0",
+    "del": "^6.0.0",
+    "esbuild": "^0.17.12",
+    "esbuild-node-externals": "^1.6.0",
+    "esbuild-plugin-clean": "^1.0.1",
+    "esbuild-plugin-replace": "^1.3.0",
     "gulp": "^4.0.2",
-    "gulp-header": "^2.0.9",
-    "gulp-ignore": "^3.0.0",
-    "gulp-load-plugins": "^2.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-size": "^3.0.0",
-    "gulp-tsc": "^1.3.2",
+    "gulp-esbuild": "^0.11.1",
+    "gulp-rename": "^2.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-uglify": "^3.0.2",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "release-it": "^14.2.1",
-    "typescript": "^4.1.3"
+    "jest": "^29.5.0",
+    "typescript": "^4.9.5"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "dependencies": {
-    "@jswork/http-rest-config": "^1.0.10",
-    "@jswork/next-apply-fetch-middleware": "^1.0.6",
-    "@jswork/next-fetch": "^1.1.25",
-    "@jswork/next-fetch-with-debug": "^1.0.5",
-    "@jswork/next-fetch-with-delay": "^1.0.4",
-    "@jswork/next-fetch-with-proxy": "^1.0.5",
-    "@jswork/next-fetch-with-random-ua": "^1.0.5",
-    "@jswork/next-fetch-with-timeout": "^1.0.10",
-    "node-fetch": "2.6.7"
-  },
-  "gitHead": "f1b57a6b15528643c12457e2bfce2e754f10e887"
+  "boilerplate": "generator-typescript",
+  "homepage": "https://js.work",
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-typescript"
+    ]
+  }
 }
