--- a/packages/node-http-schema/tsconfig.json
+++ b/packages/node-http-schema/tsconfig.json
@@ -3,12 +3,15 @@
     "target": "es5",
     "strict": true,
     "skipLibCheck": true,
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist",
-    "declaration": true,
     "pretty": true,
     "esModuleInterop": true,
     "skipDefaultLibCheck": true,
+    "moduleResolution": "node",
     "noImplicitAny": false
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
