--- a/packages/node-http-schema/package.json
+++ b/packages/node-http-schema/package.json
@@ -33,6 +33,10 @@
     "jest": "^29.5.0",
     "typescript": "^4.9.5"
   },
+  "dependencies": {
+    "@jswork/next-fetch": "^1.2.0",
+    "@jswork/http-rest-config": "^2.0.9"
+  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
