--- a/packages/node-http-schema/package.json
+++ b/packages/node-http-schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/node-http-schema",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Http schema for nodejs.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -34,8 +34,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@jswork/next-fetch": "^1.2.0",
-    "@jswork/http-rest-config": "^2.0.9"
+    "@jswork/http-rest-config": "^2.0.10",
+    "@jswork/next-fetch": "^1.2.1"
   },
   "publishConfig": {
     "access": "public",
