--- a/packages/http-schema/package.json
+++ b/packages/http-schema/package.json
@@ -32,12 +32,6 @@
     "jest": "^29.5.0",
     "typescript": "^4.9.5"
   },
-  "dependencies": {
-    "@jswork/http-data-parser": "^1.0.8",
-    "@jswork/next-data-transform": "^1.0.13",
-    "@jswork/next-tmpl": "^1.0.6",
-    "axios": "^1.3.2"
-  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
@@ -69,5 +63,9 @@
     "http",
     "schema"
   ],
-  "gitHead": "f1b57a6b15528643c12457e2bfce2e754f10e887"
+  "gitHead": "f1b57a6b15528643c12457e2bfce2e754f10e887",
+  "dependencies": {
+    "@jswork/next-axios": "^1.2.1",
+    "axios": "^1.3.5"
+  }
 }
