--- a/packages/http-schema/package.json
+++ b/packages/http-schema/package.json
@@ -65,7 +65,7 @@
   ],
   "gitHead": "f1b57a6b15528643c12457e2bfce2e754f10e887",
   "dependencies": {
-    "@jswork/next-axios": "^1.2.2",
-    "axios": "^1.3.5"
+    "@jswork/http-rest-config": "^2.0.11",
+    "@jswork/next-axios": "^1.2.2"
   }
 }
