--- a/packages/next-abstract-request/package.json
+++ b/packages/next-abstract-request/package.json
@@ -47,6 +47,7 @@
   },
   "gitHead": "5995e004fbc20bb63e28c70fa66bb741b99f75d9",
   "dependencies": {
+    "@jswork/next-data-transform": "^1.0.13",
     "@jswork/next-interceptor": "^1.0.10",
     "@jswork/next-parse-request-args": "^1.0.6",
     "@jswork/next-stub-singleton": "^1.0.6"
