--- a/packages/next-fetch/package.json
+++ b/packages/next-fetch/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@jswork/enhanced-fetch": "^1.0.20",
-    "@jswork/next-abstract-request": "^1.0.20"
+    "@jswork/next-abstract-request": "^1.0.20",
+    "@jswork/next-param": "^1.0.7"
   }
 }
