fix: axios response obj for customize transformResponse

--- a/packages/next-axios/package.json
+++ b/packages/next-axios/package.json
@@ -46,6 +46,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@jswork/next-abstract-request": "^1.0.21"
+    "@jswork/next-abstract-request": "^1.0.21",
+    "@jswork/next-json": "^1.0.4"
   }
 }
