--- a/packages/next-axios/package.json
+++ b/packages/next-axios/package.json
@@ -46,7 +46,6 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@jswork/next-abstract-request": "^1.0.26",
-    "@jswork/next-json": "^1.0.4"
+    "@jswork/next-abstract-request": "^1.0.26"
   }
 }
