--- a/packages/next-fetch/package.json
+++ b/packages/next-fetch/package.json
@@ -48,5 +48,6 @@
     "@jswork/enhanced-fetch": "^1.0.23",
     "@jswork/next-abstract-request": "^1.0.29",
     "@jswork/next-param": "^1.0.8"
-  }
+  },
+  "gitHead": "eac8fb8384182e3955879d2136d77f81dcbb53a5"
 }
