--- a/packages/next-uniapp-request/package.json
+++ b/packages/next-uniapp-request/package.json
@@ -43,5 +43,8 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "dependencies": {
+    "@jswork/next-abstract-request": "^1.0.39"
   }
 }
