--- a/packages/http-schema/package.json
+++ b/packages/http-schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/http-schema",
-  "version": "2.0.53",
+  "version": "2.1.0",
   "description": "Http schema based on next-fetch.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -65,7 +65,6 @@
   ],
   "gitHead": "20d3ab65ef3d91c29962a0d70d0ffe94c852079c",
   "dependencies": {
-    "@jswork/http-rest-config": "^2.0.12",
-    "@jswork/next-axios": "^1.2.24"
+    "@jswork/http-rest-config": "^2.0.12"
   }
 }
