--- a/packages/http-schema/package.json
+++ b/packages/http-schema/package.json
@@ -30,6 +30,7 @@
     "gulp-esbuild": "^0.11.1",
     "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^29.5.0",
+    "miniprogram-api-typings": "^3.9.1",
     "typescript": "^4.9.5"
   },
   "publishConfig": {
