--- a/packages/normalize-mina-options/tsconfig.json
+++ b/packages/normalize-mina-options/tsconfig.json
@@ -9,7 +9,10 @@
     "esModuleInterop": true,
     "skipDefaultLibCheck": true,
     "moduleResolution": "node",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "types": [
+      "miniprogram-api-typings"
+    ]
   },
   "include": [
     "src"
