--- a/packages/nprogress-interceptor/package.json
+++ b/packages/nprogress-interceptor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/nprogress-interceptor",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Interceptor for nprogress.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -16,14 +16,13 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.5",
     "jest": "^29.5.0",
-    "tsup": "^7.2.0",
     "ts-jest": "^29.0.0-next.1",
+    "tsup": "^7.2.0",
     "typescript": "^4.9.5"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "homepage": "https://js.work",
-  "dependencies": {}
+  "homepage": "https://js.work"
 }
