fix: status 204 err, content should not be resType fn

--- a/packages/enhanced-fetch/tsconfig.json
+++ b/packages/enhanced-fetch/tsconfig.json
@@ -10,11 +10,8 @@
     "skipDefaultLibCheck": true,
     "moduleResolution": "node",
     "noImplicitAny": false,
-    "types": [
-      "miniprogram-api-typings"
-    ]
+    "types": ["miniprogram-api-typings"],
+    "lib": ["es2015", "es2017", "dom"]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
