--- a/packages/http-schema/tsconfig.json
+++ b/packages/http-schema/tsconfig.json
@@ -10,7 +10,8 @@
     "skipDefaultLibCheck": true,
     "moduleResolution": "node",
     "noImplicitAny": false,
-    "types": ["miniprogram-api-typings"]
+    "types": ["miniprogram-api-typings"],
+    "lib": ["esnext", "dom"]
   },
   "include": ["src", "node_modules/@jswork"]
 }
