fix: missing nx-param

--- a/packages/next-axios/package.json
+++ b/packages/next-axios/package.json
@@ -46,7 +46,8 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@jswork/next-abstract-request": "^1.1.7"
+    "@jswork/next-abstract-request": "^1.1.7",
+    "@jswork/next-param": "^1.0.12"
   },
   "gitHead": "8fefa41757ab2beb0a6073487d18956898dd635a"
 }
