--- a/packages/next-gm-xhr/package.json
+++ b/packages/next-gm-xhr/package.json
@@ -48,5 +48,6 @@
     "@jswork/next-abstract-request": "^1.1.10",
     "@jswork/next-json": "^1.0.6",
     "@jswork/next-param": "^1.0.12"
-  }
+  },
+  "gitHead": "8b1deeacbb51260637c58b0e46035599892264ae"
 }
