--- a/packages/fetch-with-timeout/package.json
+++ b/packages/fetch-with-timeout/package.json
@@ -8,8 +8,7 @@
   "types": "dist/index.d.ts",
   "files": [
     "src",
-    "dist",
-    "global.d.ts"
+    "dist"
   ],
   "prettier": "@jswork/style-guide/prettier",
   "scripts": {
@@ -37,8 +36,8 @@
   "homepage": "https://js.work",
   "keywords": [
     "fetch-with-timeout",
-    "number",
-    "num"
+    "fetch",
+    "timeout"
   ],
   "gitHead": "e3e8257d6d8af19c4da4202b9d66f98818ef94ad"
 }
