--- a/packages/fetch-with-timeout/package.json
+++ b/packages/fetch-with-timeout/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fetch-with-timeout",
-  "version": "1.0.2",
+  "name": "@jswork/fetch-with-timeout",
+  "version": "1.0.0",
   "description": "Fetch with timeout support, enhancing request control and compatibility.",
   "npmClient": "pnpm",
   "main": "dist/index.cjs.js",
