fix: rm global.d

--- a/packages/normalize-rest-tpls/package.json
+++ b/packages/normalize-rest-tpls/package.json
@@ -9,8 +9,7 @@
   "types": "dist/index.d.ts",
   "files": [
     "src",
-    "dist",
-    "global.d.ts"
+    "dist"
   ],
   "prettier": "@jswork/style-guide/prettier",
   "scripts": {
