--- a/packages/http-rest-config/package.json
+++ b/packages/http-rest-config/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@jswork/http-data-parser": "^1.0.11",
     "@jswork/next-difference": "^1.0.2",
-    "@jswork/next-tmpl": "^1.0.7"
+    "@jswork/next-tmpl": "^1.0.7",
+    "@jswork/normalize-rest-tpls": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
